syntax = "proto3";

package p8e;

import "p8e/public_key.proto";

message P8eJob {
  oneof job {
    AddAffiliateOSLocator addAffiliateOSLocator = 1;
    ResolveAffiliateOSLocators resolveAffiliateOSLocators = 3;
  }
}

message AddAffiliateOSLocator {
  PublicKey publicKey = 1;
}

message ResolveAffiliateOSLocators {
  PublicKey localAffiliate = 1;
  repeated RemoteAffiliate remoteAffiliates = 2;
}

message RemoteAffiliate {
  PublicKey signingPublicKey = 1;
  PublicKey encryptionPublicKey = 2;
}
